# firework-melonyx

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  QUICK_START.txt
.github/workflows/: windows-build.yml
Release_Package/: Implementation.txt  README.txt
include/: camera.h  engine.h  particle.h
melonyx_phase1/: Implementation.docx  README.txt
melonyx_phase1/Demo/shaders/: particle.frag
src/: engine.cpp  main.cpp  tiny_obj_loader.cpp
